--- a/client/public/i18n/navbar/en.json
+++ b/client/public/i18n/navbar/en.json
@@ -4,5 +4,9 @@
     "guidelines for authors": "Guidelines for authors",
     "more": "More",
     "for the magazine": "For the magazine",
-    "editorial staff": "Editorial staff"
+    "editorial staff": "Editorial staff",
+    "vuzf": "Higher school of insurance and finance",
+    "copy right": "No part of this magazine may be translated or reproduced in any form without the written permission of the publisher",
+    "general terms": "General terms",
+    "privacy policy": "Privacy policy and protection of personal data"
 }
