--- a/client/public/i18n/navbar/en.json
+++ b/client/public/i18n/navbar/en.json
@@ -3,8 +3,8 @@
     "archive": "Archive",
     "guidelines for authors": "Guidelines for authors",
     "more": "More",
-    "for the magazine": "For the magazine",
-    "editorial staff": "Editorial staff",
+    "for the magazine": "About",
+    "editorial staff": "Editorial team",
     "vuzf": "Higher school of insurance and finance",
     "copy right": "No part of this magazine may be translated or reproduced in any form without the written permission of the publisher",
     "general terms": "General terms",
